fix: Remove YAML syntax error from deployment configuration
- Remove direct YAML includes from deployment.yaml to fix syntax error
- Create separate schedule_config.yaml file for configuration includes
- Update ConfigMap to include the new configuration file
- Fixes 'could not find expected :' YAML parsing error

--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -143,10 +143,8 @@ spec:
               script: !include scripts.yaml
               scene: !include scenes.yaml
               
-              # Include schedule configuration files
-              input_boolean: !include schedule/schedule_inputs.yaml
-              input_time: !include schedule/schedule_inputs.yaml
-              input_select: !include schedule/schedule_inputs.yaml
+              # Include schedule configuration
+              !include schedule/schedule_config.yaml
               
               # Shell commands for photo cleanup
               shell_command:
