--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -151,6 +151,15 @@ data:
           - "dimmed"
         initial: "relax"
 
+  schedule_config.yaml: |
+    # Schedule configuration includes
+    # This file will be included in the main configuration.yaml
+    
+    # Include schedule configuration files
+    input_boolean: !include schedule/schedule_inputs.yaml
+    input_time: !include schedule/schedule_inputs.yaml
+    input_select: !include schedule/schedule_inputs.yaml
+
   schedule_dashboard.yaml: |
     # Dashboard configuration for schedule management
     # Add this to your Home Assistant dashboard
