--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -208,6 +208,7 @@ spec:
           ports:
             - name: http
               containerPort: 8123
+              hostPort: 8123
           env:
             - name: TZ
               value: "America/New_York"
