--- a/gitops/apps/home-assistant/service.yaml
+++ b/gitops/apps/home-assistant/service.yaml
@@ -7,8 +7,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: home.amer.home,ha.amer.home,homeassistant.amer.home
     external-dns.alpha.kubernetes.io/ttl: "3600"
 spec:
-  type: LoadBalancer
-  externalTrafficPolicy: Local
+  type: ClusterIP
   selector:
     app: homeassistant
   ports:
