--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -132,7 +132,7 @@ spec:
               # Create default configuration.yaml
               cat > "${CONFIG_DIR}/configuration.yaml" << 'EOF'
               # Loads default set of integrations. Do not remove.
-              default_config:
+              default_config: {}
               
               # Load frontend themes from the themes folder
               frontend:
