--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -126,6 +126,7 @@ spec:
               mkdir -p "${CONFIG_DIR}/automations"
               mkdir -p "${CONFIG_DIR}/scripts"
               mkdir -p "${CONFIG_DIR}/scenes"
+              mkdir -p "${CONFIG_DIR}/schedule"
               mkdir -p "${CONFIG_DIR}/www/pets"
               mkdir -p "${CONFIG_DIR}/www/intruders"
               
