Fix YAML syntax issues in schedule configuration
- Fix schedule_config.yaml to use correct include paths (remove duplicate 'schedule/' prefix)
- Consolidate multiple input_time sections into single section in schedule_inputs.yaml
- Regenerate ConfigMaps with corrected YAML structure
- All schedule configuration files now have valid YAML syntax

--- a/gitops/apps/home-assistant/config/schedule_config.yaml
+++ b/gitops/apps/home-assistant/config/schedule_config.yaml
@@ -2,6 +2,6 @@
 # This file will be included in the main configuration.yaml
 
 # Include schedule configuration files
-input_boolean: !include schedule/schedule_inputs.yaml
-input_time: !include schedule/schedule_inputs.yaml
-input_select: !include schedule/schedule_inputs.yaml
+input_boolean: !include schedule_inputs.yaml
+input_time: !include schedule_inputs.yaml
+input_select: !include schedule_inputs.yaml
