--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -17,7 +17,7 @@ data:
         icon: mdi:clock-outline
         initial: true
     
-    # Schedule 1: Morning
+    # All schedule times
     input_time:
       schedule_1_start:
         name: "Morning Start Time"
@@ -28,9 +28,7 @@ data:
         name: "Morning End Time"
         icon: mdi:weather-sunny
         initial: "09:00"
-    
-    # Schedule 2: Day
-    input_time:
+      
       schedule_2_start:
         name: "Day Start Time"
         icon: mdi:weather-sunny
@@ -40,9 +38,7 @@ data:
         name: "Day End Time"
         icon: mdi:weather-sunset
         initial: "17:00"
-    
-    # Schedule 3: Evening
-    input_time:
+      
       schedule_3_start:
         name: "Evening Start Time"
         icon: mdi:weather-sunset
@@ -52,9 +48,7 @@ data:
         name: "Evening End Time"
         icon: mdi:weather-night
         initial: "21:00"
-    
-    # Schedule 4: Night
-    input_time:
+      
       schedule_4_start:
         name: "Night Start Time"
         icon: mdi:weather-night
@@ -64,9 +58,7 @@ data:
         name: "Night End Time"
         icon: mdi:weather-night
         initial: "23:00"
-    
-    # Schedule 5: Late Night
-    input_time:
+      
       schedule_5_start:
         name: "Late Night Start Time"
         icon: mdi:weather-night
@@ -156,9 +148,9 @@ data:
     # This file will be included in the main configuration.yaml
     
     # Include schedule configuration files
-    input_boolean: !include schedule/schedule_inputs.yaml
-    input_time: !include schedule/schedule_inputs.yaml
-    input_select: !include schedule/schedule_inputs.yaml
+    input_boolean: !include schedule_inputs.yaml
+    input_time: !include schedule_inputs.yaml
+    input_select: !include schedule_inputs.yaml
 
   schedule_dashboard.yaml: |
     # Dashboard configuration for schedule management
