Fix schedule configuration include structure
- Remove 'schedule:' wrapper from schedule configuration include
- Schedule config now includes input_boolean, input_time, and input_select directly at top level
- This matches Home Assistant's expected configuration structure
- Regenerate ConfigMaps with corrected include structure

--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -145,7 +145,7 @@ spec:
               scene: !include scenes.yaml
               
               # Include schedule configuration
-              schedule: !include schedule/schedule_config.yaml
+              !include schedule/schedule_config.yaml
               
               # Shell commands for photo cleanup
               shell_command:
