--- a/gitops/apps/home-assistant/service.yaml
+++ b/gitops/apps/home-assistant/service.yaml
@@ -7,7 +7,8 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: home.amer.home,ha.amer.home,homeassistant.amer.home
     external-dns.alpha.kubernetes.io/ttl: "3600"
 spec:
-  type: ClusterIP
+  type: NodePort
+  externalTrafficPolicy: Local
   selector:
     app: homeassistant
   ports:
