--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -145,7 +145,9 @@ spec:
               scene: !include scenes.yaml
               
               # Include schedule configuration
-              !include schedule/schedule_config.yaml
+              input_boolean: !include schedule/schedule_inputs.yaml
+              input_time: !include schedule/schedule_inputs.yaml
+              input_select: !include schedule/schedule_inputs.yaml
               
               # Shell commands for photo cleanup
               shell_command:
